few kms tests - abort - general protection fault, probably for non-canonical address 0x7200720072007c8
<7> [840.526406] [drm:drm_mode_debug_printmodeline [drm]] Modeline "1280x720": 50 74250 1280 1720 1760 1980 720 725 730 750 0x40 0x5
<7> [840.526446] [drm:drm_mode_debug_printmodeline [drm]] Modeline "1280x720": 50 74250 1280 1720 1760 1980 720 725 730 750 0x40 0x1c005
<7> [840.526486] [drm:drm_mode_debug_printmodeline [drm]] Modeline "1280x720": 50 74250 1280 1720 1760 1980 720 725 730 750 0x40 0x4005
<7> [840.526525] [drm:drm_mode_debug_printmodeline [drm]] Modeline "1024x768": 60 65000 1024 1048 1184 1344 768 771 777 806 0x40 0xa
<7> [840.526564] [drm:drm_mode_debug_printmodeline [drm]] Modeline "800x600": 60 40000 800 840 968 1056 600 601 605 628 0x40 0x5
<7> [840.526604] [drm:drm_mode_debug_printmodeline [drm]] Modeline "720x576": 50 27000 720 732 796 864 576 581 586 625 0x40 0xa
<7> [840.526643] [drm:drm_mode_debug_printmodeline [drm]] Modeline "720x480": 60 27027 720 736 798 858 480 489 495 525 0x40 0xa
<7> [840.526683] [drm:drm_mode_debug_printmodeline [drm]] Modeline "720x480": 60 27000 720 736 798 858 480 489 495 525 0x40 0xa
<7> [840.526722] [drm:drm_mode_debug_printmodeline [drm]] Modeline "640x480": 60 25200 640 656 752 800 480 490 492 525 0x40 0xa
<7> [840.526761] [drm:drm_mode_debug_printmodeline [drm]] Modeline "640x480": 60 25175 640 656 752 800 480 490 492 525 0x40 0xa
<7> [840.526868] [drm:drm_helper_probe_single_connector_modes [drm_kms_helper]] [CONNECTOR:259:DP-4]
<7> [840.526902] xe 0000:03:00.0: [drm:intel_dp_detect [xe]] [CONNECTOR:259:DP-4]
<7> [840.556126] xe 0000:03:00.0: [drm:intel_dp_aux_xfer [xe]] AUX C/DDI C/PHY C: timeout (status 0x7d40027f)
<7> [840.593575] xe 0000:03:00.0: [drm:intel_dp_aux_xfer [xe]] AUX C/DDI C/PHY C: timeout (status 0x7d40027f)
<7> [840.633572] xe 0000:03:00.0: [drm:intel_dp_aux_xfer [xe]] AUX C/DDI C/PHY C: timeout (status 0x7d40027f)
<7> [840.673573] xe 0000:03:00.0: [drm:intel_dp_aux_xfer [xe]] AUX C/DDI C/PHY C: timeout (status 0x7d40027f)
<7> [840.713573] xe 0000:03:00.0: [drm:intel_dp_aux_xfer [xe]] AUX C/DDI C/PHY C: timeout (status 0x7d40027f)
<7> [840.753573] xe 0000:03:00.0: [drm:intel_dp_aux_xfer [xe]] AUX C/DDI C/PHY C: timeout (status 0x7d40027f)
<7> [840.793572] xe 0000:03:00.0: [drm:intel_dp_aux_xfer [xe]] AUX C/DDI C/PHY C: timeout (status 0x7d40027f)
<7> [840.833572] xe 0000:03:00.0: [drm:intel_dp_aux_xfer [xe]] AUX C/DDI C/PHY C: timeout (status 0x7d40027f)
<4> [840.858644] general protection fault, probably for non-canonical address 0x7200720072007c8: 0000 [#1] PREEMPT SMP NOPTI
<4> [840.858650] CPU: 18 PID: 2086 Comm: kworker/18:4 Tainted: G U W 6.9.0-rc1-xe #1
<4> [840.858654] Hardware name: Micro-Star International Co., Ltd. MS-7D25/PRO Z690-A DDR4(MS-7D25), BIOS 1.10 12/13/2021
<4> [840.858656] Workqueue: events devcd_del
<4> [840.858661] RIP: 0010:xe_guc_ct_snapshot_free+0x13/0x40 [xe]
<4> [840.858729] Code: 00 00 00 00 00 66 90 90 90 90 90 90 90 90 90 90 90 90 90 90 90 90 90 0f 1f 44 00 00 48 85 ff 74 2f 55 48 89 e5 41 54 49 89 fc <48> 8b bf a8 00 00 00 e8 91 10 ba e0 49 8b 7c 24 48 e8 87 10 ba e0
<4> [840.858732] RSP: 0018:ffffc90001b37d20 EFLAGS: 00010202
<4> [840.858734] RAX: 0000000000000000 RBX: 0000000000000000 RCX: 0000000027d2094d
<4> [840.858736] RDX: 00000000c05866ea RSI: ffff8881221ab378 RDI: 0720072007200720
<4> [840.858737] RBP: ffffc90001b37d28 R08: 000000000dfb8ec6 R09: 0000000060dfb8ec
<4> [840.858739] R10: 0000000000000001 R11: ffffffff8309eaa8 R12: 0720072007200720
<4> [840.858741] R13: ffff88821695d000 R14: ffff888128680000 R15: ffff888128680d20
<4> [840.858742] FS: 0000000000000000(0000) GS:ffff88888f700000(0000) knlGS:0000000000000000
<4> [840.858744] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [840.858746] CR2: 00007fb6eea3c420 CR3: 0000000012254000 CR4: 0000000000750ef0
<4> [840.858747] PKRU: 55555554
<4> [840.858749] Call Trace:
<4> [840.858750] <TASK>
<4> [840.858752] ? show_regs+0x67/0x70
<4> [840.858756] ? __die_body+0x20/0x70
<4> [840.858758] ? die_addr+0x3e/0x60
<4> [840.858760] ? exc_general_protection+0x202/0x430
<4> [840.858766] ? asm_exc_general_protection+0x27/0x30
<4> [840.858770] ? xe_guc_ct_snapshot_free+0x13/0x40 [xe]
<4> [840.858833] xe_devcoredump_free+0x42/0x120 [xe]
<4> [840.858891] devcd_dev_release+0x1f/0x70
<4> [840.858893] device_release+0x38/0xa0
<4> [840.858896] kobject_put+0x96/0x1b0
<4> [840.858899] put_device+0x13/0x20
<4> [840.858901] devcd_del+0x22/0x30